--- a/css/block/expandable-content.css
+++ b/css/block/expandable-content.css
@@ -1,198 +1,193 @@
 /*
  * Styles for expandable content paragraph
- *
-*/
+ */
 
 .ucb-expandable-content .vertical-tab-content {
-	width: 100%;
+  width: 100%;
 }
 
 .ucb-expandable-content .horizontal-tab-accordion .nav-tabs,
 .ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
-	display: none;
+  display: none;
 }
 
 .ucb-expandable-content .accordion-button, .ucb-expandable-content .accordion-button:not(.collapsed), .ucb-expandable-content .accordion-button:focus {
-	color: #0277bd;
-	font-size: 18px;
-	font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	background-color: transparent;
-	box-shadow: none;
-
+  color: #0277bd;
+  font-size: 18px;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: transparent;
+  box-shadow: none;
 }
 
 .ucb-expandable-content .accordion-button:not(.collapsed)::after, .ucb-expandable-content .accordion-button::after {
-	background: none;
+  background: none;
 }
 
-.ucb-expandable-content .accordion-button::before {
-	flex-shrink: 0;
-	margin-right: 0.25em;
-	content: "\f0fe";
-	transition: transform 0.2s ease-in-out;
-	font-family: 'Font Awesome 6 Free';
-	font-weight: 900;
-	color: #0277bd;
+.ucb-expandable-content .accordion-button .ucb-accordion-button-content-icon-expand,
+.ucb-expandable-content .accordion-button .ucb-accordion-button-content-icon-collapse {
+  flex-shrink: 0;
+  margin-right: 0.25em;
 }
 
-.ucb-expandable-content .accordion-button:not(.collapsed)::before {
-	content: "\f146";
+.ucb-expandable-content .accordion-button.collapsed .ucb-accordion-button-content-icon-collapse,
+.ucb-expandable-content .accordion-button:not(.collapsed) .ucb-accordion-button-content-icon-expand {
+  display: none;
 }
 
 .ucb-expandable-content .accordion-button:hover {
-	color: #b71c1c;
+  color: #b71c1c;
 }
 
 .ucb-expandable-content .accordion-button:hover::before {
-	color: #b71c1c;
+  color: #b71c1c;
 }
 
 .ucb-expandable-content .accordion-button, .ucb-expandable-content .accordion-body {
-	padding-left: 0;
-	padding-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .ucb-bootstrap-layout-section-dark .ucb-expandable-content .accordion-button {
-	color: var(--ucb-gold);
+  color: var(--ucb-gold);
 }
 
 .ucb-bootstrap-layout-section-dark .ucb-expandable-content .accordion-button::before {
-	color: var(--ucb-gold);
+  color: var(--ucb-gold);
 }
 
 .ucb-bootstrap-layout-section-dark .ucb-expandable-content .accordion-button:hover {
-	color: var(--ucb-white);
+  color: var(--ucb-white);
 }
 
 .ucb-bootstrap-layout-section-dark .ucb-expandable-content .accordion-button:hover::before {
-	color: var(--ucb-white);
+  color: var(--ucb-white);
 }
 
 .ucb-bootstrap-layout-section-dark .ucb-expandable-content .horizontal-tab-link.nav-link{
-	color: var(--ucb-white);
+  color: var(--ucb-white);
 }
 
 .ucb-bootstrap-layout-section-light .ucb-expandable-content .horizontal-tab-link.nav-link{
-	color: var(--ucb-black);
+  color: var(--ucb-black);
 }
 
 .ucb-expandable-content .horizontal-tab-link.nav-link.active {
-	color: var(--ucb-white);
-	background-color: var(--ucb-black);
-	border-radius: 0;
+  color: var(--ucb-white);
+  background-color: var(--ucb-black);
+  border-radius: 0;
 }
 
 .ucb-bootstrap-layout-section-dark .ucb-expandable-content .horizontal-tab-link.nav-link.active {
-	color: var(--ucb-black);
-	background-color: var(--ucb-white);
+  color: var(--ucb-black);
+  background-color: var(--ucb-white);
 }
 
 .ucb-expandable-content .horizontal-tab-link.nav-link {
-	font-weight: bold;
-	line-height: 1.2em;
-	padding: 8px 15px;
+  font-weight: bold;
+  line-height: 1.2em;
+  padding: 8px 15px;
 }
 
 .ucb-expandable-content .horizontal-tab-link.nav-link,
 .ucb-expandable-content .horizontal-tab-link.nav-link:hover,
 .ucb-expandable-content .horizontal-tab-link.nav-link:focus {
-	border: none;
-	border-radius: 0;
+  border: none;
+  border-radius: 0;
 }
 
 .ucb-expandable-content .vertical-tab-link.nav-link {
-	color: #6a6a6a;
-	background-color: #e7e7e7;
-	font-weight: bold;
-	text-align: left;
-	border-radius: 0;
+  color: #6a6a6a;
+  background-color: #e7e7e7;
+  font-weight: bold;
+  text-align: left;
+  border-radius: 0;
 }
 
 .ucb-bootstrap-layout-section-dark .ucb-expandable-content .vertical-tab-link.nav-link {
-	color: #cccccc;
-	background-color: rgba(128, 128, 128, 0.333);
+  color: #cccccc;
+  background-color: rgba(128, 128, 128, 0.333);
 }
 
 .ucb-expandable-content .vertical-tab-link.nav-link.active {
-	color: var(--ucb-black);
-	background-color: var(--ucb-white);
+  color: var(--ucb-black);
+  background-color: var(--ucb-white);
 }
 
 .ucb-bootstrap-layout-section-dark .ucb-expandable-content .vertical-tab-link.nav-link.active {
-	color: var(--ucb-white);
-	background-color: var(--ucb-black);
+  color: var(--ucb-white);
+  background-color: var(--ucb-black);
 }
 
 .ucb-expandable-content .accordian-content .collapse:not(.show), .ucb-expandable-content .horizontal-tab-content .collapse:not(.show), .ucb-expandable-content .vertical-tab-content .collapse:not(.show) {
-	display: none;
+  display: none;
 }
 
 .ucb-expandable-content .accordian-content .collapse.show, .ucb-expandable-content .horizontal-tab-content .collapse.show, .ucb-expandable-content .vertical-tab-content .collapse.show, 
 .ucb-expandable-content .accordian-content .collapsing, .ucb-expandable-content .horizontal-tab-content .collapsing, .ucb-expandable-content .vertical-tab-content .collapsing {
-	display: block;
+  display: block;
 }
 
 .ucb-expandable-content .accordion-item {
-	color: inherit;
-	background-color: inherit;
-	border-bottom: 1px solid rgba(128, 128, 128, 0.333);
+  color: inherit;
+  background-color: inherit;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.333);
 }
 
 @media (min-width: 768px) {
-	.ucb-expandable-content .horizontal-tab-accordion .nav-tabs,
-	.ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
-		display: flex;
-	}
+  .ucb-expandable-content .horizontal-tab-accordion .nav-tabs,
+  .ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
+    display: flex;
+  }
 
-	.ucb-expandable-content .horizontal-tab-accordion .nav-tabs {
-		border-bottom: 2px solid var(--ucb-black);
-	}
+  .ucb-expandable-content .horizontal-tab-accordion .nav-tabs {
+    border-bottom: 2px solid var(--ucb-black);
+  }
 
-	.ucb-bootstrap-layout-section-dark .ucb-expandable-content .horizontal-tab-accordion .nav-tabs  {
-		border-bottom: 2px solid var(--ucb-white);
-	}
+  .ucb-bootstrap-layout-section-dark .ucb-expandable-content .horizontal-tab-accordion .nav-tabs  {
+    border-bottom: 2px solid var(--ucb-white);
+  }
 
-	.ucb-expandable-content .horizontal-tab-content .accordion-header, .ucb-expandable-content .vertical-tab-content .accordion-header,
-	.ucb-expandable-content .horizontal-tab-content .collapse.show, .ucb-expandable-content .vertical-tab-content .collapse.show {
-		display: none;
-	}
+  .ucb-expandable-content .horizontal-tab-content .accordion-header, .ucb-expandable-content .vertical-tab-content .accordion-header,
+  .ucb-expandable-content .horizontal-tab-content .collapse.show, .ucb-expandable-content .vertical-tab-content .collapse.show {
+    display: none;
+  }
 
-	.ucb-expandable-content .horizontal-tab-content .collapse.active, .ucb-expandable-content .vertical-tab-content .collapse.active {
-		display: block;
-	}
+  .ucb-expandable-content .horizontal-tab-content .collapse.active, .ucb-expandable-content .vertical-tab-content .collapse.active {
+    display: block;
+  }
 
-	.ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
-		width: 100%;
-		max-width: 25%;
-		background-color: #f2f2f2;
-	}
+  .ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
+    width: 100%;
+    max-width: 25%;
+    background-color: #f2f2f2;
+  }
 
-	.ucb-bootstrap-layout-section-dark .ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
-		background-color: rgba(128, 128, 128, 0.333);
-	}
+  .ucb-bootstrap-layout-section-dark .ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
+    background-color: rgba(128, 128, 128, 0.333);
+  }
 
-	.ucb-expandable-content .vertical-tab-accordion .vertical-tab-content {
-		display: flex;
-		max-width: 75%;
-		padding: 0 1em;
-	}
+  .ucb-expandable-content .vertical-tab-accordion .vertical-tab-content {
+    display: flex;
+    max-width: 75%;
+    padding: 0 1em;
+  }
 
-	.ucb-expandable-content .horizontal-tab-accordion .horizontal-accordion-tab,
-	.ucb-expandable-content .vertical-tab-accordion .vertical-accordion-tab {
-		display: none;
-	}
+  .ucb-expandable-content .horizontal-tab-accordion .horizontal-accordion-tab,
+  .ucb-expandable-content .vertical-tab-accordion .vertical-accordion-tab {
+    display: none;
+  }
 
-	.ucb-expandable-content .horizontal-tab-content .accordion-item, .ucb-expandable-content .vertical-tab-content .accordion-item {
-		border-bottom: none;
-	}
+  .ucb-expandable-content .horizontal-tab-content .accordion-item, .ucb-expandable-content .vertical-tab-content .accordion-item {
+    border-bottom: none;
+  }
 
-	.ucb-expandable-content .horizontal-tab-content .accordion-body, .ucb-expandable-content .vertical-tab-content .accordion-body {
-		padding-top: 20px;
-		padding-bottom: 0;
-	}
+  .ucb-expandable-content .horizontal-tab-content .accordion-body, .ucb-expandable-content .vertical-tab-content .accordion-body {
+    padding-top: 20px;
+    padding-bottom: 0;
+  }
 
-	.ucb-expandable-content .vertical-tab-accordion {
-		background: none;
-		border: 1px solid rgba(128, 128, 128, 0.333);
-	}
+  .ucb-expandable-content .vertical-tab-accordion {
+    background: none;
+    border: 1px solid rgba(128, 128, 128, 0.333);
+  }
 }
