Adds missing comma in `css/ucb-article.css`

--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -32,7 +32,7 @@ i.fa-regular.fa-calendar {
   line-height: 1em;
 }
 
-.ucb-article-category-icon, .ucb-article-tag-icon{
+.ucb-article-category-icon, .ucb-article-tag-icon {
   background-color: #555555;
   color: #e7e7e7;
   height: 16px;
@@ -72,7 +72,7 @@ i.fa-regular.fa-calendar {
 }
 
 .ucb-article-tags i.fa-solid,
-.ucb-article-categories i.fa-solid
+.ucb-article-categories i.fa-solid,
 .ucb-article-issue i.fa-solid {
   padding: 0.5em;
   background: #555;
