--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -115,7 +115,7 @@
           </a>
           {% if site_search.0 %}
             <a class="ucb-search-link" href="{{ site_search.0.url }}">
-              <img class="ucb-search" alt="Search Colorado.edu" src="https://cdn.colorado.edu/static/brand-assets/live/images/search-{{ campus_header_text_color }}.svg">
+              <img class="ucb-search" alt="Search" src="https://cdn.colorado.edu/static/brand-assets/live/images/search-{{ campus_header_text_color }}.svg">
             </a>
           {% endif %}
         </div>
