--- a/css/ucb-search-modal.css
+++ b/css/ucb-search-modal.css
@@ -1,11 +1,10 @@
 .ucb-search-modal {
-  display: block;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 300;
+  z-index: 999;
   background: rgba(0, 0, 0, 0.85);
   color: #fff;
   transition: opacity .2s ease-in-out;
@@ -15,18 +14,20 @@
   display: none;
 }
 
-.ucb-search-modal .ucb-search-modal-inner {
-  display: flex;
-  align-items: center;
+.ucb-search-modal .ucb-search-modal-backdrop {
+  position: absolute;
+  width: 100%;
   height: 100%;
 }
 
 .ucb-search-modal .ucb-search-modal-content {
   position: relative;
-  box-sizing: border-box;
   width: 100%;
+  height: 100%;
   max-width: 720px;
-  margin: 0 auto;
+  box-sizing: border-box;
+  overflow-y: auto;
+  margin: 25vh auto 0 auto;
   padding: 20px;
 }
 
@@ -47,4 +48,16 @@
 .ucb-search-modal a:link:hover,
 .ucb-search-modal a:visited:hover {
   color: #fff;
+}
+
+@media screen and (max-height: 768px) {
+  .ucb-search-modal .ucb-search-modal-content {
+    margin-top: 10vh;
+  }
+}
+
+@media screen and (max-height: 512px) {
+  .ucb-search-modal .ucb-search-modal-content {
+    margin-top: 0;
+  }
 }
