--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,9 @@ div#drupal-off-canvas-wrapper {
 }
 
 /* Image Styles */ 
+.imageMediaStyle{
+  display: inline;
+}
 .imageMediaStyle img{
   padding-bottom: 20px;
 }
@@ -827,4 +830,9 @@ table.table-horizontal td, div.table-horizontal table td {
 table.table-vertical td, div.table-vertical table td {
   border-top: none;
   border-bottom: none;
+}
+
+figure:has(div:has(div:has(div:has(.wide_image_style)))){
+  margin-left: 0px !important;
+  margin-right: 0px !important;
 }
