--- a/css/block/content-grid.css
+++ b/css/block/content-grid.css
@@ -74,7 +74,7 @@
   margin-bottom: 1em;
 }
 
-.overlay-grid-image-container h3 {
+.overlay-grid-image-container h2, .overlay-grid-image-container h3 {
   padding: 0.75rem;
   position: absolute;
   bottom: 0;
@@ -83,11 +83,9 @@
   margin-bottom: 0;
   color: white;
   width: 100%;
+  font-size: 100%
 }
 
-.overlay-grid-text {
-  margin-bottom: 1em;
-}
 
 /*** Offest Grid Layout ***/
 .grid-image-container-large .grid-fill {
