--- a/css/ucb-person.css
+++ b/css/ucb-person.css
@@ -1,8 +1,10 @@
 .ucb-person-header {
+  padding-top: 1em;
   margin-bottom: 10px;
 }
 
 .ucb-person-name {
+  padding-top: 10px;
   margin-bottom: 0;
 }
 
