--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -138,9 +138,11 @@
 
   {# MAIN PAGE CONTENT #}
   <div class="ucb-page-content">
+  {% if show_breadcrumb %}
   <div class="ucb-breadcrumb-region">
     {{ page.breadcrumb }}
   </div>
+  {% endif %}
 
   {{ page.highlighted }}
 
