--- a/css/menu-styles/modern-styles.css
+++ b/css/menu-styles/modern-styles.css
@@ -81,28 +81,28 @@ section.ucb-main-nav-section {
   color: #fff;
 }
 
-li.main-menu-item a.nav-link {
+.ucb-main-menu li.menu-item a.nav-link {
   font-weight: 600;
   color: #fff;
   border-bottom: none;
 }
 
-li.main-menu-item a.nav-link:hover {
+.ucb-main-menu li.menu-item a.nav-link:hover {
   background-color: #444;
   border-bottom: none;
   color: #fff;
 }
-li.main-menu-item a.nav-link.is-active,
-li.main-menu-item.active a.nav-link:first-of-type{
+.ucb-main-menu li.menu-item a.nav-link.is-active,
+.ucb-main-menu li.menu-item.active a.nav-link:first-of-type{
   background-color: #cfb87c;
   color: #000;
 }
-li.main-menu-item a.nav-link.home-link,
-li.main-menu-item a.nav-link.home-link.active {
+.ucb-main-menu li.menu-item a.nav-link.home-link,
+.ucb-main-menu li.menu-item a.nav-link.home-link.active {
   background-color: transparent;
   color: #fff;
 }
-li.main-menu-item a.nav-link.home-link {
+.ucb-main-menu li.menu-item a.nav-link.home-link {
   margin-left: -12px;
 }
 
