--- a/css/ucb-sticky-menu.css
+++ b/css/ucb-sticky-menu.css
@@ -57,12 +57,12 @@
 	color: #FFFFFF;
 }
 
-.sticky-menu-inner li.main-menu-item a.nav-link {
+.sticky-menu-inner .ucb-main-menu li.menu-item a.nav-link {
 	color: #FFFFFF;
 	border-bottom: none;
 	padding: 0 .5rem;
 }
 
-.sticky-menu-inner li.main-menu-item a.nav-link:hover {
+.sticky-menu-inner .ucb-main-menu li.menu-item a.nav-link:hover {
 	color: var(--ucb-gold);
 }
