--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -20,9 +20,9 @@
  *   - url: The menu link url, instance of \Drupal\Core\Url
  *   - localized_options: Menu link localized options.
  *   - is_expanded: TRUE if the link has visible children within the current
- *     menu tree.
+ *   menu tree.
  *   - is_collapsed: TRUE if the link has children within the current menu tree
- *     that are not currently visible.
+ *   that are not currently visible.
  *   - in_active_trail: TRUE if the link is in the active trail.
  */
 #}
@@ -32,32 +32,35 @@
   We call a macro which calls itself to render the full tree.
   @see http://twig.sensiolabs.org/doc/tags/macro.html
 #}
-
 {{ menus.menu_links(items, attributes, 0) }}
 {% macro menu_links(items, attributes, menu_level) %}
-    {% import _self as menus %}
-    {% if items %}
-        <ul{{ attributes.addClass('ucb-menu nav') }}>
-            {% for item in items %}
-                {%
-                    set classes = [
-                    'menu-item',
-                    item.is_expanded ? 'dropdown hovernav menu-dropdown',
-                    item.is_collapsed ? 'dropdown hovernav menu-dropdown',
-                    item.in_active_trail ? 'active',
-                ]
-                %}
-                <li{{ item.attributes.addClass(classes) }}>
-                    {% if item.below %}
-                        {{ link(item.title, item.url, { 'class':['nav-link', 'dropdown-toggle']}) }}
-                        <ul class="dropdown-menu ucb-dropdown-menu">
-                            {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
-                        </ul>
-                    {% else %}
-                        {{ link(item.title, item.url, { 'class':['nav-link']}) }}
-                    {% endif %}
-                </li>
-            {% endfor %}
-        </ul>
-    {% endif %}
+  {% import _self as menus %}
+  {% if items %}
+    {{ attach_library('boulder_base/ucb-menu') }}
+    <ul{{ attributes.addClass('ucb-menu nav') }}>
+      {% for item in items %}
+        {% set classes = [
+          'menu-item',
+          item.is_expanded ? 'dropdown hovernav menu-dropdown',
+          item.is_collapsed ? 'dropdown hovernav menu-dropdown',
+          item.in_active_trail ? 'active',
+        ] %}
+        <li{{ item.attributes.addClass(classes) }}>
+          {% if item.title|upper == "HOME" %}
+            <a href="{{ item.url }}" id="ucb-home-button" class="ucb-home-button nav-link" title="Home">
+              <span class="sr-only">Home</span>
+              <i class="fa-solid fa-home"></i>
+            </a>
+          {% elseif item.below %}
+            {{ link(item.title, item.url, { 'class':['nav-link', 'dropdown-toggle']}) }}
+            <ul class="dropdown-menu ucb-dropdown-menu">
+              {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
+            </ul>
+          {% else %}
+            {{ link(item.title, item.url, { 'class': ['nav-link']}) }}
+          {% endif %}
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 {% endmacro %}
