--- a/templates/regions/region--primary-menu.html.twig
+++ b/templates/regions/region--primary-menu.html.twig
@@ -12,6 +12,14 @@
  * @see template_preprocess_region()
  */
 #}
-<div class="ucb-primary-menu-region">
-	<div class="ucb-primary-menu-region-container{{ ucb_secondary_menu_position == 'above' ? ' container' : ''}}">{{ content }}</div>
+<script src="https://cdn.jsdelivr.net/npm/accessible-menu@3.0.8/dist/accessible-menu.min.js" type="module"></script>
+<div class="ucb-primary-menu-region-container{{ ucb_secondary_menu_position == 'above' ? ' container' : '' }}">
+  <nav class="ucb-main-menu" id="ucb-main-menu-nav">
+    <div class="ucb-mobile-menu-button-div">
+      <button id="example-toggle" aria-label="Toggle example menu">☰</button>
+    </div>
+    <div class="ucb-primary-menu-region">
+      {{ content }}
+    </div>
+  </nav>
 </div>
