CuBoulder/tiamat-theme#538 Ensures the `ucb-main-menu-nav` element id isn‘t duplicated if the sticky menu is enabled

--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -1,4 +1,4 @@
-#example-toggle {
+#ucb-mobile-menu-toggle {
   display: none;
 }
 
@@ -35,7 +35,7 @@
   .ucb-secondary-menu-region {
     width: 100%;
   }
-  #example-toggle {
+  #ucb-mobile-menu-toggle {
     display: block;
     max-width: 100px;
     font-size: 2em;
