--- a/templates/includes/ucb-sticky-menu.html.twig
+++ b/templates/includes/ucb-sticky-menu.html.twig
@@ -9,7 +9,7 @@
 			    <a href="{{ front_page }}">{% if ucb_custom_logo %}<img role="img" srcset="{{ ucb_custom_logo.dark_url }} {{ ucb_custom_logo.scale }}" alt="{{ site_name }}">{% else %}{{ site_name }}{% endif %}</a>
 			</div>
 			<div class="sticky-menu-menu">
-				{{ page.primary_menu }}
+				{{ page.primary_menu.boulder_base_main_menu }}
 			</div>
 		</div>
 	</div>
