--- a/templates/regions/region--primary-menu.html.twig
+++ b/templates/regions/region--primary-menu.html.twig
@@ -13,9 +13,9 @@
  */
 #}
 <div class="ucb-primary-menu-region-container{{ ucb_secondary_menu_position == 'above' ? ' container' : '' }}">
-  <nav class="ucb-main-menu" id="ucb-main-menu-nav">
+  <nav class="ucb-main-menu">
     <div class="ucb-mobile-menu-button-div">
-      <button id="example-toggle" aria-label="Toggle example menu">☰</button>
+      <button id="ucb-mobile-menu-toggle" aria-label="Toggle menu">☰</button>
     </div>
     <div class="ucb-primary-menu-region">
       {{ content }}
