fixes errors when no secondary or footer

--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -45,7 +45,7 @@
   .ucb-primary-menu-region {
     width: 100%;
   }
-  .ucb-menu.hide {
+  .ucb-menu.nav.hide {
     display: none;
   }
   .ucb-menu.open {
