--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -36,14 +36,13 @@
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    {{ attach_library('boulder_base/ucb-menu') }}
     <ul{{ attributes.addClass('ucb-menu nav') }}>
       {% for item in items %}
         {% set classes = [
           'menu-item',
-          item.is_expanded ? 'dropdown hovernav menu-dropdown',
-          item.is_collapsed ? 'dropdown hovernav menu-dropdown',
-          item.in_active_trail ? 'active',
+          item.is_expanded ? 'expanded',
+          item.is_collapsed ? 'collapsed',
+          item.in_active_trail ? 'active'
         ] %}
         <li{{ item.attributes.addClass(classes) }}>
           {% if item.title|upper == "HOME" %}
@@ -52,10 +51,8 @@
               <i class="fa-solid fa-home"></i>
             </a>
           {% elseif item.below %}
-            {{ link(item.title, item.url, { 'class':['nav-link', 'dropdown-toggle']}) }}
-            <ul class="dropdown-menu ucb-dropdown-menu">
-              {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
-            </ul>
+            {{ link(item.title, item.url, { 'class': ['nav-link']}) }}
+            {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
           {% else %}
             {{ link(item.title, item.url, { 'class': ['nav-link']}) }}
           {% endif %}
