Adds minor cleanup

--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -118,7 +118,7 @@
 }
 
 .ucb-page-content .ucb-menu li.menu-item {
-  border-bottom: 1px solid rgba(0, 0, 0, 9%);
+  border-bottom: 1px solid rgba(0, 0, 0, .09);
 }
 
 .ucb-page-content .ucb-menu li.menu-item.active {
@@ -144,7 +144,7 @@
 
 .ucb-page-content .ucb-menu li.menu-item a.nav-link:hover {
   color: #000;
-  background-color: rgba(0, 0, 0, 9%);
+  background-color: rgb(0, 0, 0, .09);
 }
 
 .ucb-page-content .ucb-menu li.menu-item a.nav-link.is-active {
