--- a/templates/regions/region--breadcrumb.html.twig
+++ b/templates/regions/region--breadcrumb.html.twig
@@ -20,7 +20,8 @@
   ]
 %}
 
-{% if show_breadcrumb and content %}
+
+{% if (show_breadcrumb) and (content|render|striptags|trim is not empty) %}
 	<div{{ attributes.addClass(classes) }}>
 		<div class="ucb-breadcrumb-row row">
 			{{ content }}
