Fixes display issue with Article Title Background Image

--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -193,3 +193,8 @@ i.fa-regular.fa-calendar {
 .backgroundTitleDiv > div > div > .media-image-caption{
   display: none;
 }
+
+/* Fixes display issues on Article Header Image caused by .imageMediaStyle display */
+.backgroundTitleDiv .imageMediaStyle {
+  display: block;
+}
